adicionando sistema de login a pagina admin

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -12,9 +12,9 @@
                 @* <a class="hover:underline flex items-center gap-1" href="/galeria">
                     <i class="fa-regular fa-images"></i> Galeria
                 </a> *@
-                @* <a class="hover:underline flex items-center gap-1" href="/admin">
+                <a class="hover:underline flex items-center gap-1" href="/admin">
                     <i class="fa-solid fa-gear"></i> Admin
-                </a> *@
+                </a>
                 @* <a class="hover:underline flex items-center gap-1" href="/download-zip">
                     <i class="fa-solid fa-file-zipper"></i> Baixar ZIP
                 </a> *@
