Adicionando animação a botao do instagram

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -19,3 +19,6 @@
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
+
+<link href="css/animations.css" rel="stylesheet" />
+
