Removendo opção de download

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -5,14 +5,14 @@
         <div class="max-w-6xl mx-auto px-4 py-3 flex flex-col sm:flex-row items-center justify-center gap-6">
             <a class="text-xl font-bold" href="/">FotoPrint</a>
             <div class="flex gap-6">
-                <a class="hover:underline flex items-center gap-1" href="/upload">
+                @*<a class="hover:underline flex items-center gap-1" href="/upload">
                     <i class="fa-solid fa-upload"></i> Upload
-                </a>
+                </a>*@
                 @* Se quiser ativar depois, descomente *@
                 @* <a class="hover:underline flex items-center gap-1" href="/galeria">
                     <i class="fa-regular fa-images"></i> Galeria
                 </a> *@
-               @*  <a class="hover:underline flex items-center gap-1" href="/admin">
+                @*  <a class="hover:underline flex items-center gap-1" href="/admin">
                     <i class="fa-solid fa-gear"></i> Admin
                 </a> *@
                 @* <a class="hover:underline flex items-center gap-1" href="/download-zip">
