--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -10,7 +10,9 @@
     <base href="~/" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/app.css" />
+    <link href="css/app.css" rel="stylesheet" />
+    <link href="css/animations.css" rel="stylesheet" />
+    <link href="css/styles-responsivos.css" rel="stylesheet" />
 </head>
 <body class="antialiased">
     <app>
@@ -20,5 +22,4 @@
 </body>
 </html>
 
-<link href="css/animations.css" rel="stylesheet" />
 
