--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,9 +3,16 @@
 @inject IJSRuntime JS
 @inject NavigationManager Navigation
 
+<style>
+    .no-select {
+        user-select: none;
+    }
+
+</style>
+
 <div class="container mx-auto px-20 py-20">
     <div class="max-w-xl mx-auto bg-white rounded-2xl shadow-xl p-10 text-center">
-        <h1 class="text-4xl font-bold my-6">@titulo</h1>
+        <h1 class="text-4xl font-bold my-6 no-select">@titulo</h1>
         <p class="text-lg text-gray-600 mb-8">
             Envie as fotos e deixe a impressão com a gente.
         </p>
